insertion des balises inlines

--- a/index.html
+++ b/index.html
@@ -6,63 +6,66 @@
 	<link rel="stylesheet" type="text/css" href="">
 </head>
 <body>
-CONTACT
+	<div id="contenu">
+		<div class="element1" id="element1"> <!--colonne de gauche début-->
+			<h2>CONTACT</h2>
+				<ul>
+					<li>Adresse<br/>
+						Orléans, France</li>
+					<li>Téléphone<br/>
+						06 00 00 00 00</li>
+					<li>Email<br/>
+						nom@email.com</li>
+					<li>Site Web<br/>
+						www.monsite.com</li>
 
-Adresse
-Orléans, France
-Téléphone
-06 00 00 00 00
-Email
-nom@email.com
-Site Web
-www.monsite.com
+			<h2>A PROPOS DE MOI</h2>
 
-A PROPOS DE MOI
+<p>Passionnée par le dessin et par la création en tout genre, le métier de développeur est un métier qui englobe parfaitement toutes mes capacités en terme de création, d'imagination et d'invention.<br/>
 
-Passionnée par le dessin et par la création en tout genre, le métier de développeur est un métier qui englobe parfaitement toutes mes capacités en terme de création, d'imagination et d'invention.
+Après les logiciels de dessin tel que Krita ou photoshop, j'explore aujourd'hui les outils propres au développeur web.<br/>
+Les codes sont comme des formules magiques que l'on pose sur un papier informatique et qui prennent forme à travers nos sites et nos applications.<br/>
 
-Après les logiciels de dessin tel que Krita ou photoshop, j'explore aujourd'hui les outils propres au développeur web.
-Les codes sont comme des formules magiques que l'on pose sur un papier informatique et qui prennent forme à travers nos sites et nos applications.
+En reconversion, j'ai choisi ce métier pour sa capacité de s'exprimer pleinement en réalisant les projets qui nous tiennent à coeur et de les partager sur la toile.</p>
 
-En reconversion, j'ai choisi ce métier pour sa capacité de s'exprimer pleinement en réalisant les projets qui nous tiennent à coeur et de les partager sur la toile.
-
-LOISIRS
+			<h2>LOISIRS</h2>
 
 Dessin
 Film
 Danse
+		</div><!--fin colonne de gauche-->
+		<div class="element2" id="element2"><!--colonne droite début-->
+			<h1>MAY TONG VANG<h1>
+				Dévoloppeuse Web
 
-MAY TONG VANG
-Dévoloppeuse Web
+				<h2>FORMATION</h2>
+					<ul>
+						<li>de 2003 à 2007 Lycée Benjamin Franklin (45)<br/>
+							BAC ES, éconimique et social,<br/>
+							option anglais renforcé</li>
 
-FORMATION
+						<li>de 2007 à 2009 Université l'Orléans la Source (45)<br/>
+							LEA Langues étrangrères appliquées,<br/>
+							option anglais/japonais</li>
 
+						<li>2020 OpenClassrooms,<br/>
+							Développeur Web</li>
+					</ul>
 
-de 2003 à 2007 Lycée Benjamin Franklin (45)
-BAC ES, éconimique et social,
-option anglais renforcé
+				<h2>EXPERIENCES</h2>
+					<ul>
+						<li>Depuis 2009 Amazon.fr Logistique Saran (45),<br/>
+							Préparatrice de commande,<br/>
+							Inventaire/Qualité</li>
+					</ul>
 
-de 2007 à 2009 Université l'Orléans la Source (45)
-LEA Langues étrangrères appliquées,
-option anglais/japonais
+				<h2>COMPETENCES</h2>
+					<ul>
+						<li>HTML/CSS</li>
+						<li>Git et GitHub</li>
+						<li>Visual Studio</li>
+		</div><!--fin colonne de droite-->
 
-2020 OpenClassrooms,
-Développeur Web
-
-EXPERIENCES
-
-Depuis 2009 Amazon.fr Logistique Saran (45),
-Préparatrice de commande,
-Inventaire/Qualité
-
-
-COMPETENCES
-
-HTML/CSS
-Git et GitHub
-Visual Studio
-
-
-
+	</div>
 </body>
 </html>
