ajout fichier css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Mon_CV_MaytongVang</title>
-	<link rel="stylesheet" type="text/css" href="">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<div id="contenu">
@@ -18,7 +18,7 @@
 						nom@email.com</li>
 					<li>Site Web<br/>
 						www.monsite.com</li>
-
+				</ul>
 			<h2>A PROPOS DE MOI</h2>
 
 <p>Passionnée par le dessin et par la création en tout genre, le métier de développeur est un métier qui englobe parfaitement toutes mes capacités en terme de création, d'imagination et d'invention.<br/>
@@ -35,8 +35,8 @@ Film
 Danse
 		</div><!--fin colonne de gauche-->
 		<div class="element2" id="element2"><!--colonne droite début-->
-			<h1>MAY TONG VANG<h1>
-				Dévoloppeuse Web
+			<h1>MAY TONG VANG</h1>
+				Développeuse Web
 
 				<h2>FORMATION</h2>
 					<ul>
