ajout de balise structurante dans html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 	<div id="contenu">
 		<div class="element1" id="element1"> <!--colonne de gauche début-->
+			<nav>
 			<h2>CONTACT</h2>
 				<ul>
 					<li>Adresse<br/>
@@ -33,11 +34,14 @@ En reconversion, j'ai choisi ce métier pour sa capacité de s'exprimer pleineme
 Dessin
 Film
 Danse
+			</nav>
 		</div><!--fin colonne de gauche-->
 		<div class="element2" id="element2"><!--colonne droite début-->
-			<h1>MAY TONG VANG</h1>
-				Développeuse Web
-
+			<header>
+			<h1><span>MAY TONG</span> VANG</h1>
+				<p><span>Dévelo</span>ppeuse Web Freelance</p>
+			</header>
+			<section>
 				<h2>FORMATION</h2>
 					<ul>
 						<li>de 2003 à 2007 Lycée Benjamin Franklin (45)<br/>
@@ -51,19 +55,23 @@ Danse
 						<li>2020 OpenClassrooms,<br/>
 							Développeur Web</li>
 					</ul>
-
+			</section>
+			<section>
 				<h2>EXPERIENCES</h2>
 					<ul>
 						<li>Depuis 2009 Amazon.fr Logistique Saran (45),<br/>
 							Préparatrice de commande,<br/>
 							Inventaire/Qualité</li>
 					</ul>
-
+			</section>
+			<section>
 				<h2>COMPETENCES</h2>
 					<ul>
 						<li>HTML/CSS</li>
 						<li>Git et GitHub</li>
 						<li>Visual Studio</li>
+					</ul>
+			</section>
 		</div><!--fin colonne de droite-->
 
 	</div>
