rajout de balise html pour section et code CSS

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 Après les logiciels de dessin tel que Krita ou photoshop, j'explore aujourd'hui les outils propres au développeur web.<br/>
 Les codes sont comme des formules magiques que l'on pose sur un papier informatique et qui prennent forme à travers nos sites et nos applications.<br/>
 
-En reconversion, j'ai choisi ce métier pour sa capacité de s'exprimer pleinement en réalisant les projets qui nous tiennent à coeur et de les partager sur la toile.</p>
+En reconversion, j'ai choisi ce métier pour l'opportunité qu'il nous offre à exprimer pleinement en réalisant les projets qui nous tiennent à coeur et de les partager sur la toile.</p>
 
 			<h2>LOISIRS</h2>
 
@@ -39,30 +39,39 @@ Danse
 		<div class="element2" id="element2"><!--colonne droite début-->
 			<header>
 			<h1><span>MAY TONG</span> VANG</h1>
-				<p><span>Dévelo</span>ppeuse Web Freelance</p>
+				<p><span id="sousligner">Dévelo</span>ppeuse Web Freelance</p>
 			</header>
 			<section>
 				<h2>FORMATION</h2>
-					<ul>
-						<li>de 2003 à 2007 Lycée Benjamin Franklin (45)<br/>
+				<div id="FORMATION1">
+					<div class="class1">
+						de 2003 à 2007</div>
+							<div class="class2">
+							Lycée Benjamin Franklin (45)<br/>
 							BAC ES, éconimique et social,<br/>
-							option anglais renforcé</li>
-
-						<li>de 2007 à 2009 Université l'Orléans la Source (45)<br/>
+							option anglais renforcé</div>
+				</div>
+				<div id="formation2">
+					<div class="class3">de 2007 à 2009</div>
+							<div class="class4">Université l'Orléans la Source (45)<br/>
 							LEA Langues étrangrères appliquées,<br/>
-							option anglais/japonais</li>
-
-						<li>2020 OpenClassrooms,<br/>
-							Développeur Web</li>
-					</ul>
+							option anglais/japonais</div>
+				</div>
+				<div id="formation3">		
+					<div class="class5">	
+						2020</div>
+							<div class="class6">OpenClassrooms,<br/>
+							Développeur Web</div>
+				</div>	
 			</section>
 			<section>
 				<h2>EXPERIENCES</h2>
-					<ul>
-						<li>Depuis 2009 Amazon.fr Logistique Saran (45),<br/>
+				<div id="experience">
+						<div class="class7">Depuis 2009</div>
+							<div class="class8"> Amazon.fr Logistique Saran (45),<br/>
 							Préparatrice de commande,<br/>
-							Inventaire/Qualité</li>
-					</ul>
+							Inventaire/Qualité</div>
+				</div>
 			</section>
 			<section>
 				<h2>COMPETENCES</h2>
