alignement des sections dans CSS et modification des balises en html

--- a/index.html
+++ b/index.html
@@ -53,8 +53,10 @@ Danse
 				</div>
 				<div id="formation2">
 					<div class="class3">de 2007 à 2009</div>
-							<div class="class4">Université l'Orléans la Source (45)<br/>
-							LEA Langues étrangrères appliquées,<br/>
+							<div class="class4">Université de Langue<br/>
+							Orléans la Source (45)<br/>
+							LEA:<br/>
+							Langues étrangrères appliquées,
 							option anglais/japonais</div>
 				</div>
 				<div id="formation3">		
