inversement des dates dans section Expérience avec display flex column reverse en CSS

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ Danse
 			</header>
 			<section>
 				<h2>FORMATION</h2>
+				<div id="formation_master">	
 				<div id="FORMATION1">
 					<div class="class1">
 						de 2003 à 2007</div>
@@ -65,6 +66,7 @@ Danse
 							<div class="class6">OpenClassrooms,<br/>
 							Développeur Web</div>
 				</div>	
+			</div>
 			</section>
 			<section>
 				<h2>EXPERIENCES</h2>
