ajout de logo et ajustement html et css

--- a/index.html
+++ b/index.html
@@ -7,86 +7,123 @@
 </head>
 <body>
 	<div id="contenu">
-		<div class="element1" id="element1"> <!--colonne de gauche début-->
+<!--colonne de gauche début-->
+		<div class="element1" id="element1"> 
+			
+			<img src="image/tete.png" id="tete">
 			<nav>
 			<h2>CONTACT</h2>
+				<div>
 				<ul>
 					<li>Adresse<br/>
-						Orléans, France</li>
+						Orléans, France</li><br/>
 					<li>Téléphone<br/>
-						06 00 00 00 00</li>
+
+
+						06 00 00 00 00</li><br/>
 					<li>Email<br/>
-						nom@email.com</li>
+						nom@email.com</li><br/>
 					<li>Site Web<br/>
-						www.monsite.com</li>
+						www.monsite.com</li><br/>
 				</ul>
-			<h2>A PROPOS DE MOI</h2>
+			    </div>
+			</nav>
+			<div class="apropos">
+			<h2>À PROPOS DE MOI</h2>
 
 <p>Passionnée par le dessin et par la création en tout genre, le métier de développeur est un métier qui englobe parfaitement toutes mes capacités en terme de création, d'imagination et d'invention.<br/>
 
 Après les logiciels de dessin tel que Krita ou photoshop, j'explore aujourd'hui les outils propres au développeur web.<br/>
 Les codes sont comme des formules magiques que l'on pose sur un papier informatique et qui prennent forme à travers nos sites et nos applications.<br/>
 
-En reconversion, j'ai choisi ce métier pour l'opportunité qu'il nous offre à exprimer pleinement en réalisant les projets qui nous tiennent à coeur et de les partager sur la toile.</p>
-
+En reconversion, j'ai choisi ce métier pour l'opportunité qu'il nous offre à nous exprimer pleinement en réalisant les projets qui nous tiennent à coeur et de les partager sur la toile.</p>
+			</div>
 			<h2>LOISIRS</h2>
-
-Dessin
-Film
-Danse
-			</nav>
-		</div><!--fin colonne de gauche-->
-		<div class="element2" id="element2"><!--colonne droite début-->
+			<div id="logo1">
+				<img src="image/palette.svg" class="logo1" />
+				<img src="image/film.svg" class="logo1" />
+				<img src="image/music.svg" class="logo1" />
+			</div>
+		</div>
+<!--fin colonne de gauche-->
+<!--colonne droite début-->
+		<div class="element2" id="element2">
+			<div id="header">
 			<header>
 			<h1><span>MAY TONG</span> VANG</h1>
-				<p><span id="sousligner">Dévelo</span>ppeuse Web Freelance</p>
+				<h3><span id="sousligner">Dévelo</span>ppeuse Web Freelance</h3>
 			</header>
+			</div>
+	<!--Section Formation-->
 			<section>
-				<h2>FORMATION</h2>
+				<h2><img src="image/gradcap.svg" class="logo2"/>FORMATION</h2>
+				
+				<!--début id formation_master-->
 				<div id="formation_master">	
-				<div id="FORMATION1">
-					<div class="class1">
-						de 2003 à 2007</div>
-							<div class="class2">
-							Lycée Benjamin Franklin (45)<br/>
+					<!--formation1-->
+					<div id="formation1">
+						<div class="class1">
+							<li>de 2003 à 2007</li>
+						</div>
+						<div class="class2">
+							<h3>LYCÉE BENJAMIN FRANKLIN (45)</h3>
 							BAC ES, éconimique et social,<br/>
-							option anglais renforcé</div>
-				</div>
-				<div id="formation2">
-					<div class="class3">de 2007 à 2009</div>
-							<div class="class4">Université de Langue<br/>
+							option anglais renforcé
+						</div>
+					</div>
+					<!--formation2-->
+					<div id="formation2">
+						<div class="class3">
+							<li>de 2007 à 2009</li>
+						</div>
+						<div class="class4">
+							<h3>UNIVÉRSITÉ DES LANGUES</h3>
 							Orléans la Source (45)<br/>
-							LEA:<br/>
-							Langues étrangrères appliquées,
-							option anglais/japonais</div>
+							LEA: Langues étrangrères appliquées,<br/>
+							option anglais/japonais
+						</div>
+					</div>
+					<!--formation3-->
+					<div id="formation3">		
+						<div class="class5">	
+							<li>2020</li>
+						</div>
+					<div class="class6">
+						<h3>OPENCLASSROOMS,</h3>
+							Développeur Web,<br/>
+							HTML/CSS<br/>
+							Git et GitHub<br/>
+							Visual Studio
+					</div>
+
 				</div>
-				<div id="formation3">		
-					<div class="class5">	
-						2020</div>
-							<div class="class6">OpenClassrooms,<br/>
-							Développeur Web</div>
-				</div>	
+				<!--Fin id formation_master-->
+
 			</div>
 			</section>
+	<!--Section Expérience Professionnelle-->		
 			<section>
-				<h2>EXPERIENCES</h2>
+				<h2><img src="image/briefcase.svg" class="logo2"/> EXPÉRIENCE PROFESSIONNELLE</h2>
 				<div id="experience">
-						<div class="class7">Depuis 2009</div>
-							<div class="class8"> Amazon.fr Logistique Saran (45),<br/>
+						<div class="class7"><li>Depuis 2009</li></div>
+							<div class="class8"> <h3>AMAZON.FR LOGISTIQUE Saran (45),</h3>
 							Préparatrice de commande,<br/>
-							Inventaire/Qualité</div>
+							Résolveur de problème,<br/>
+							Formatrice,<br/>
+							Inventaire/Qualité,<br/>
+							Analyste sur données informatiques.</div>
 				</div>
 			</section>
-			<section>
-				<h2>COMPETENCES</h2>
-					<ul>
-						<li>HTML/CSS</li>
-						<li>Git et GitHub</li>
-						<li>Visual Studio</li>
-					</ul>
+	<!--Section Recommandations-->
+			<section class="reco">
+				<h2><img src="image/pen-nib.svg" class="logo2" />RECOMMANDATION</h2>
+						OPENCLASSROOMS<br/>
+						E-learning Platform<br/>
+						Tel: +33 1 80 88 80 30<br/>
+						Email: hello@openclassrooms.com
 			</section>
-		</div><!--fin colonne de droite-->
-
+		</div>
+<!--fin colonne de droite-->
 	</div>
 </body>
 </html>
