--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<title>Mon_CV_MaytongVang</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" href="fontawesome-free-5.13.1-web/css/all.css">
 </head>
 <body>
 	<div id="contenu">
@@ -40,9 +41,9 @@ En reconversion, j'ai choisi ce métier pour l'opportunité qu'il nous offre à 
 			</div>
 			<h2>LOISIRS</h2>
 			<div id="logo1">
-				<img src="image/palette.svg" class="logo1" />
-				<img src="image/film.svg" class="logo1" />
-				<img src="image/music.svg" class="logo1" />
+				<div class="l1"><i class="fas fa-palette"></i></div>
+				<div class="l2"><i class="fas fa-film"></i></div>
+				<div class="l3"><i class="fas fa-music"></i></div>
 			</div>
 		</div>
 <!--fin colonne de gauche-->
@@ -51,51 +52,50 @@ En reconversion, j'ai choisi ce métier pour l'opportunité qu'il nous offre à 
 			<div id="header">
 			<header>
 			<h1><span>MAY TONG</span> VANG</h1>
-				<h3><span id="sousligner">Dévelo</span>ppeuse Web Freelance</h3>
+				<h3><span id="sousligner">Dével</span>oppeuse Web Freelance</h3>
 			</header>
 			</div>
 	<!--Section Formation-->
 			<section>
-				<h2><img src="image/gradcap.svg" class="logo2"/>FORMATION</h2>
+				<h2><i class="fas fa-graduation-cap"></i>FORMATION</h2>
 				
 				<!--début id formation_master-->
 				<div id="formation_master">	
 					<!--formation1-->
-					<div id="formation1">
+					<div id="formation">
 						<div class="class1">
-							<li>de 2003 à 2007</li>
+							<i class="fas fa-circle fa-xs"></i>2003 à 2007
 						</div>
 						<div class="class2">
 							<h3>LYCÉE BENJAMIN FRANKLIN (45)</h3>
-							BAC ES, éconimique et social,<br/>
-							option anglais renforcé
+							<p>BAC ES, éconimique et social,<br/>
+							option anglais renforcé</p>
 						</div>
 					</div>
 					<!--formation2-->
-					<div id="formation2">
-						<div class="class3">
-							<li>de 2007 à 2009</li>
+					<div id="formation">
+						<div class="class1">
+							<i class="fas fa-circle fa-xs"></i>2007 à 2009
 						</div>
-						<div class="class4">
+						<div class="class2">
 							<h3>UNIVÉRSITÉ DES LANGUES</h3>
-							Orléans la Source (45)<br/>
+							<p>Orléans la Source (45)<br/>
 							LEA: Langues étrangrères appliquées,<br/>
-							option anglais/japonais
+							option anglais/japonais</p>
 						</div>
 					</div>
 					<!--formation3-->
-					<div id="formation3">		
-						<div class="class5">	
-							<li>2020</li>
+					<div id="formation">		
+						<div class="class1">	
+							<i class="far fa-dot-circle"></i>2020
 						</div>
-					<div class="class6">
+						<div class="class2">
 						<h3>OPENCLASSROOMS,</h3>
-							Développeur Web,<br/>
+							<p>Développeur Web,<br/>
 							HTML/CSS<br/>
 							Git et GitHub<br/>
-							Visual Studio
+							Visual Studio</p>
 					</div>
-
 				</div>
 				<!--Fin id formation_master-->
 
@@ -103,10 +103,11 @@ En reconversion, j'ai choisi ce métier pour l'opportunité qu'il nous offre à 
 			</section>
 	<!--Section Expérience Professionnelle-->		
 			<section>
-				<h2><img src="image/briefcase.svg" class="logo2"/> EXPÉRIENCE PROFESSIONNELLE</h2>
+				<h2><i class="fas fa-briefcase"></i>EXPÉRIENCE PROFESSIONNELLE</h2>
 				<div id="experience">
-						<div class="class7"><li>Depuis 2009</li></div>
-							<div class="class8"> <h3>AMAZON.FR LOGISTIQUE Saran (45),</h3>
+						<div class="class1">
+						<i class="fas fa-circle fa-xs"></i>Depuis 2009</div>
+							<div class="class2"> <h3>AMAZON.FR LOGISTIQUE Saran (45),</h3>
 							Préparatrice de commande,<br/>
 							Résolveur de problème,<br/>
 							Formatrice,<br/>
@@ -115,12 +116,14 @@ En reconversion, j'ai choisi ce métier pour l'opportunité qu'il nous offre à 
 				</div>
 			</section>
 	<!--Section Recommandations-->
-			<section class="reco">
-				<h2><img src="image/pen-nib.svg" class="logo2" />RECOMMANDATION</h2>
+			<section id="reco">
+				<h2><i class="fas fa-pen-nib"></i>RECOMMANDATION</h2>
+					<div class="reco">
 						OPENCLASSROOMS<br/>
 						E-learning Platform<br/>
 						Tel: +33 1 80 88 80 30<br/>
 						Email: hello@openclassrooms.com
+					</div>
 			</section>
 		</div>
 <!--fin colonne de droite-->
