ajout de code CSS pour responsive

--- a/index.html
+++ b/index.html
@@ -14,30 +14,28 @@
 			<img src="image/tete.png" id="tete">
 			<nav>
 			<h2>CONTACT</h2>
-				<div>
-				<ul>
-					<li>Adresse<br/>
-						Orléans, France</li><br/>
-					<li>Téléphone<br/>
-
-
-						06 00 00 00 00</li><br/>
-					<li>Email<br/>
-						nom@email.com</li><br/>
-					<li>Site Web<br/>
-						www.monsite.com</li><br/>
-				</ul>
+				<div id="CONTACT">
+				
+					<div  class="adresse"><p>Adresse<br/>
+						Orléans, France</p></div>
+					<div class="tel"><p>Téléphone<br/>
+						06 00 00 00 00</p></div>
+					<div class="email"><p>Email<br/>
+						nom@email.com</p></div>
+					<div class="site"><p>Site Web<br/>
+						www.monsite.com</p></div>
+				
 			    </div>
 			</nav>
 			<div class="apropos">
 			<h2>À PROPOS DE MOI</h2>
 
-<p>Passionnée par le dessin et par la création en tout genre, le métier de développeur est un métier qui englobe parfaitement toutes mes capacités en terme de création, d'imagination et d'invention.<br/>
+<p>Passionnée par le dessin et l'art plastique, le métier de développeur correspond parfaitement à mes envies et besoins de création, d'imagination et d'invention.<br/>
 
-Après les logiciels de dessin tel que Krita ou photoshop, j'explore aujourd'hui les outils propres au développeur web.<br/>
-Les codes sont comme des formules magiques que l'on pose sur un papier informatique et qui prennent forme à travers nos sites et nos applications.<br/>
+Après les logiciels de dessin et d'image tel que Krita ou photoshop, j'explore aujourd'hui les outils propres au métier de développeur web.<br/>
+Les codes sont comme des formules magiques que l'on pose sur un support informatique et qui prennent forme à travers nos sites et nos applications.<br/>
 
-En reconversion, j'ai choisi ce métier pour l'opportunité qu'il nous offre à nous exprimer pleinement en réalisant les projets qui nous tiennent à coeur et de les partager sur la toile.</p>
+En reconversion, j'ai choisi ce métier pour l'opportunité qu'il nous offre à nous exprimer pleinement en réalisant les projets qui nous tiennent à coeur et à les partager sur la toile.</p>
 			</div>
 			<h2>LOISIRS</h2>
 			<div id="logo1">
