modification font size media quiery

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 					<div class="tel"><p>Téléphone<br/>
 						06 00 00 00 00</p></div>
 					<div class="email"><p>Email<br/>
-						nom@email.com</p></div>
+						<a href="mailto: nom@email.com">nom@email.com</a></p></div>
 					<div class="site"><p>Site Web<br/>
-						www.monsite.com</p></div>
+						<a href="www.monsite.com">www.monsite.com</a></p></div>
 				
 			    </div>
 			</nav>
@@ -120,7 +120,7 @@ En reconversion, j'ai choisi ce métier pour l'opportunité qu'il nous offre à 
 						OPENCLASSROOMS<br/>
 						E-learning Platform<br/>
 						Tel: +33 1 80 88 80 30<br/>
-						Email: hello@openclassrooms.com
+						Email: <a href="mailto:hello@openclassrooms.com">hello@openclassrooms.com</a>
 					</div>
 			</section>
 		</div>
