--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
 	<meta charset="utf-8">
 	<title>Mon_CV_MaytongVang</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" href="fontawesome-free-5.13.1-web/css/all.css">
+	<link rel="stylesheet" href="fontawesome-free-5.13.1-web/css/all.css"/>
 </head>
 <body>
 	<div id="contenu">
 <!--colonne de gauche début-->
-		<div class="element1" id="element1"> 
+		<div id="element1"> 
 			
-			<img src="image/tete.png" id="tete">
+			<img src="image/tete.png" alt="ma_tete">
 			<nav>
 			<h2>CONTACT</h2>
 				<div id="CONTACT">
@@ -21,7 +21,7 @@
 					<div class="tel"><p>Téléphone<br/>
 						06 00 00 00 00</p></div>
 					<div class="email"><p>Email<br/>
-						<a href="mailto: nom@email.com">nom@email.com</a></p></div>
+						<a href="mailto:nom@email.com">nom@email.com</a></p></div>
 					<div class="site"><p>Site Web<br/>
 						<a href="www.monsite.com">www.monsite.com</a></p></div>
 				
@@ -29,7 +29,7 @@
 			</nav>
 			<div class="apropos">
 			<h2>À PROPOS DE MOI</h2>
-
+			<i class="fas fa-palette"></i>
 <p>Passionnée par le dessin et l'art plastique, le métier de développeur correspond parfaitement à mes envies et besoins de création, d'imagination et d'invention.<br/>
 
 Après les logiciels de dessin et d'image tel que Krita ou photoshop, j'explore aujourd'hui les outils propres au métier de développeur web.<br/>
@@ -39,14 +39,12 @@ En reconversion, j'ai choisi ce métier pour l'opportunité qu'il nous offre à 
 			</div>
 			<h2>LOISIRS</h2>
 			<div id="logo1">
-				<div class="l1"><i class="fas fa-palette"></i></div>
-				<div class="l2"><i class="fas fa-film"></i></div>
-				<div class="l3"><i class="fas fa-music"></i></div>
+				<i class="fas fa-palette"></i>
 			</div>
 		</div>
 <!--fin colonne de gauche-->
 <!--colonne droite début-->
-		<div class="element2" id="element2">
+		<div id="element2">
 			<div id="header">
 			<header>
 			<h1><span>MAY TONG</span> VANG</h1>
@@ -60,7 +58,7 @@ En reconversion, j'ai choisi ce métier pour l'opportunité qu'il nous offre à 
 				<!--début id formation_master-->
 				<div id="formation_master">	
 					<!--formation1-->
-					<div id="formation">
+					<div id="formation1">
 						<div class="class1">
 							<i class="fas fa-circle fa-xs"></i>2003 à 2007
 						</div>
@@ -71,7 +69,7 @@ En reconversion, j'ai choisi ce métier pour l'opportunité qu'il nous offre à 
 						</div>
 					</div>
 					<!--formation2-->
-					<div id="formation">
+					<div id="formation2">
 						<div class="class1">
 							<i class="fas fa-circle fa-xs"></i>2007 à 2009
 						</div>
@@ -83,7 +81,7 @@ En reconversion, j'ai choisi ce métier pour l'opportunité qu'il nous offre à 
 						</div>
 					</div>
 					<!--formation3-->
-					<div id="formation">		
+					<div id="formation3">		
 						<div class="class1">	
 							<i class="far fa-dot-circle"></i>2020
 						</div>
