--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			</nav>
 			<div class="apropos">
 			<h2>À PROPOS DE MOI</h2>
-			<i class="fas fa-palette"></i>
+			
 <p>Passionnée par le dessin et l'art plastique, le métier de développeur correspond parfaitement à mes envies et besoins de création, d'imagination et d'invention.<br/>
 
 Après les logiciels de dessin et d'image tel que Krita ou photoshop, j'explore aujourd'hui les outils propres au métier de développeur web.<br/>
@@ -40,6 +40,8 @@ En reconversion, j'ai choisi ce métier pour l'opportunité qu'il nous offre à 
 			<h2>LOISIRS</h2>
 			<div id="logo1">
 				<i class="fas fa-palette"></i>
+				<i class="fas fa-film"></i>
+				<i class="fas fa-music"></i>
 			</div>
 		</div>
 <!--fin colonne de gauche-->
