correction erreur dans w3c

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 				<ul>
 				
 					<li>Adresse<br/>
-						Orléans, France</li><br/>
+						Orléans, France</li>
 					<li>Téléphone<br/>
-						06 00 00 00 00</p></li>
+						06 00 00 00 00</li>
 					<li>Email<br/>
-						<a href="mailto:nom@email.com">nom@email.com</a></li><br/>
+						<a href="mailto:nom@email.com">nom@email.com</a></li>
 					<li>Site Web<br/>
 						<a href="www.monsite.com">www.monsite.com</a></li>
 				
@@ -89,6 +89,7 @@ En reconversion, j'ai choisi ce métier pour l'opportunité qu'il nous offre à 
 							<h3>LYCÉE BENJAMIN FRANKLIN (45)</h3>
 							<p>BAC ES, éconimique et social,<br/>
 							option anglais renforcé</p>
+						</div>
 					</div>
 			</section>
 	<!--Section Expérience Professionnelle-->		
